@@ -48,7 +48,9 @@ public abstract class AbstractDescriptorServiceTest
         resourceService = Mockito.mock( ResourceService.class );
         Mockito.when( resourceService.getResource( Mockito.any() ) ).thenAnswer( invocation -> {
             final ResourceKey resourceKey = (ResourceKey) invocation.getArguments()[0];
-            return new Resource( resourceKey, new URL( "module:" + resourceKey.toString() ) );
+            final String path = resourceKey.getApplicationKey().toString() + resourceKey.getPath().toString();
+            final URL resourceUrl = new File( applicationsDir, path ).toURI().toURL();
+            return resourceUrl == null ? null : new Resource( resourceKey, resourceUrl );
         } );
     }
 
@@ -119,6 +121,7 @@ public abstract class AbstractDescriptorServiceTest
         for ( final String path : paths )
         {
             final ResourceKey resourceKey = ResourceKey.from( application.getKey(), path );
+
             resourceList.add( new Resource( resourceKey, new URL( "module:" + resourceKey.toString() ) ) );
         }
         Resources resources = Resources.from( resourceList );
